# amount_cut_calcutater

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/static/: styles.css
app/templates/: index.html
